deploy: 6d6757ac8b0aa46a2a7a98f0af22992831f4493b

--- a/genindex.html
+++ b/genindex.html
@@ -249,14 +249,16 @@
 </li>
       <li><a href="mathematics/complex analysis/holomorphic_functions.html#index-1">Cauchy-Riemann conditions</a>
 </li>
+      <li><a href="mathematics/numerical_methods/Numerical_differentiation.html#index-2">Central difference</a>
+</li>
       <li><a href="geosciences/Climate_Model.html#index-0">Climate model (1D)</a>
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-1">Codomain</a>
 </li>
-      <li><a href="mathematics/statistics/Linear_Regression.html#index-2">Coefficient of determination</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/statistics/Linear_Regression.html#index-2">Coefficient of determination</a>
+</li>
       <li><a href="mathematics/sets and functions/sets.html#index-2">Commutative (Abelian) group</a>
 </li>
       <li><a href="mathematics/complex analysis/intro.html#index-0">Complex Analysis</a>
@@ -301,10 +303,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Milankovitch_cycles.html#index-1">Eccentricity</a>
 </li>
-      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+      <li><a href="mathematics/numerical_methods/Euler_method.html#index-0">Euler method</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
+</li>
       <li><a href="mathematics/numerical_methods/Forward_time_centred_space.html#index-2">Explicit scheme</a>
 </li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-0">Exponential function</a>
@@ -321,10 +325,12 @@
 </li>
       <li><a href="coding/Intro to Python/6_For_loops.html#index-0">For loop (python)</a>
 </li>
-      <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-0">Fourier series</a>
+      <li><a href="mathematics/numerical_methods/Numerical_differentiation.html#index-1">Forward difference</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-0">Fourier series</a>
+</li>
       <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-1">Fourier series: coefficients</a>
 </li>
       <li><a href="mathematics/series_and_sequences/Fourier Transforms.html#index-0">Fourier transforms</a>
@@ -362,6 +368,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/differential_equations/10_heat_eq.html#index-0">Heat (diffusion) equation</a>
+</li>
+      <li><a href="mathematics/numerical_methods/Heuns_method.html#index-0">Heun&#39;s method</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -463,8 +471,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Intro to Python/8_Nested_lists.html#index-0">Nested lists (python)</a>
 </li>
+      <li><a href="mathematics/numerical_methods/Numerical_differentiation.html#index-3">Numerical 2nd derivative</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/numerical_methods/Numerical_differentiation.html#index-0">Numerical differentiation</a>
+</li>
       <li><a href="mathematics/numerical_methods/Numerical_integration.html#index-0">Numerical integration</a>
 </li>
   </ul></td>
