--- a/mathematics/numerical_methods/Forward_time_centred_space.html
+++ b/mathematics/numerical_methods/Forward_time_centred_space.html
@@ -40,8 +40,8 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Numerical integration" href="Numerical_integration.html" />
-    <link rel="prev" title="Numerical methods" href="intro.html" />
+    <link rel="next" title="Heun’s method" href="Heuns_method.html" />
+    <link rel="prev" title="Euler method" href="Euler_method.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -106,8 +106,17 @@
     <li class="active">
       <a href="intro.html">Numerical methods</a>
       <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Euler_method.html">Euler method</a>
+      </li>
       <li class="active">
         <a href="">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
+      <li class="">
+        <a href="Heuns_method.html">Heun’s method</a>
+      </li>
+      <li class="">
+        <a href="Numerical_differentiation.html">Numerical differentiation</a>
       </li>
       <li class="">
         <a href="Numerical_integration.html">Numerical integration</a>
@@ -497,8 +506,8 @@ Used dt = 0.0100.
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Numerical methods</a>
-    <a class='right-next' id="next-link" href="Numerical_integration.html" title="next page">Numerical integration</a>
+    <a class='left-prev' id="prev-link" href="Euler_method.html" title="previous page">Euler method</a>
+    <a class='right-next' id="next-link" href="Heuns_method.html" title="next page">Heun’s method</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
