--- a/mathematics/numerical_methods/Numerical_integration.html
+++ b/mathematics/numerical_methods/Numerical_integration.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Runge-Kutta integration method" href="Runge_Kutta_method.html" />
-    <link rel="prev" title="Forward Time Centred Space (FTCS) scheme" href="Forward_time_centred_space.html" />
+    <link rel="prev" title="Numerical differentiation" href="Numerical_differentiation.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -107,7 +107,16 @@
       <a href="intro.html">Numerical methods</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Euler_method.html">Euler method</a>
+      </li>
+      <li class="">
         <a href="Forward_time_centred_space.html">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
+      <li class="">
+        <a href="Heuns_method.html">Heun’s method</a>
+      </li>
+      <li class="">
+        <a href="Numerical_differentiation.html">Numerical differentiation</a>
       </li>
       <li class="active">
         <a href="">Numerical integration</a>
@@ -1076,7 +1085,7 @@ Area with 1000 Weddle&#39;s interval(s) = 2 (error=8.88178e-16)
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Forward_time_centred_space.html" title="previous page">Forward Time Centred Space (FTCS) scheme</a>
+    <a class='left-prev' id="prev-link" href="Numerical_differentiation.html" title="previous page">Numerical differentiation</a>
     <a class='right-next' id="next-link" href="Runge_Kutta_method.html" title="next page">Runge-Kutta integration method</a>
 
     </div>
