--- a/mathematics/numerical_methods/Solving_PDEs_SOR.html
+++ b/mathematics/numerical_methods/Solving_PDEs_SOR.html
@@ -107,7 +107,16 @@
       <a href="intro.html">Numerical methods</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Euler_method.html">Euler method</a>
+      </li>
+      <li class="">
         <a href="Forward_time_centred_space.html">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
+      <li class="">
+        <a href="Heuns_method.html">Heun’s method</a>
+      </li>
+      <li class="">
+        <a href="Numerical_differentiation.html">Numerical differentiation</a>
       </li>
       <li class="">
         <a href="Numerical_integration.html">Numerical integration</a>
