--- a/mathematics/numerical_methods/intro.html
+++ b/mathematics/numerical_methods/intro.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Forward Time Centred Space (FTCS) scheme" href="Forward_time_centred_space.html" />
+    <link rel="next" title="Euler method" href="Euler_method.html" />
     <link rel="prev" title="Review of tensors" href="../mathematical_notation/Tensors_Review.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,7 +107,16 @@
       <a href="">Numerical methods</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Euler_method.html">Euler method</a>
+      </li>
+      <li class="">
         <a href="Forward_time_centred_space.html">Forward Time Centred Space (FTCS) scheme</a>
+      </li>
+      <li class="">
+        <a href="Heuns_method.html">Heun’s method</a>
+      </li>
+      <li class="">
+        <a href="Numerical_differentiation.html">Numerical differentiation</a>
       </li>
       <li class="">
         <a href="Numerical_integration.html">Numerical integration</a>
@@ -275,7 +284,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../mathematical_notation/Tensors_Review.html" title="previous page">Review of tensors</a>
-    <a class='right-next' id="next-link" href="Forward_time_centred_space.html" title="next page">Forward Time Centred Space (FTCS) scheme</a>
+    <a class='right-next' id="next-link" href="Euler_method.html" title="next page">Euler method</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
