deploy: 9f241636e0fb021504aa1316564a85dd1859ae72

--- a/genindex.html
+++ b/genindex.html
@@ -227,9 +227,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/linear_algebra/Theory.html#index-3">Basis</a>
 </li>
+      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-2">Bijection</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-2">Bijection</a>
+      <li><a href="mathematics/numerical_methods/Roots_of_equations.html#index-3">Bisection method</a>
 </li>
       <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-0">Break and continue statements (python)</a>
 </li>
@@ -322,6 +324,8 @@
       <li><a href="mathematics/sets and functions/sets.html#index-3">Field (mathematics)</a>
 </li>
       <li><a href="coding/Intro to Python/13_File_handling.html#index-0">File handling</a>
+</li>
+      <li><a href="mathematics/numerical_methods/Roots_of_equations.html#index-0">Finding roots of equations numerically</a>
 </li>
       <li><a href="coding/Intro to Python/6_For_loops.html#index-0">For loop (python)</a>
 </li>
@@ -519,15 +523,17 @@
 </li>
       <li><a href="coding/Pandas/2_filter_select_assign.html#index-1">Pandas: selecting</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-3">Pandas: sorting</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="coding/Pandas/4_summary_statistics.html#index-0">Pandas: summary stats</a>
 </li>
       <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-1">Pass statement (python)</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
+</li>
+      <li><a href="mathematics/numerical_methods/Roots_of_equations.html#index-1">Picard&#39;s method</a>
 </li>
       <li><a href="geosciences/Dynamic_Earth.html#index-0">Plate tectonics</a>
 </li>
@@ -559,10 +565,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/functions.html#index-3">Restriction (functions)</a>
 </li>
-      <li><a href="mathematics/statistics/Linear_Regression.html#index-1">Root-mean-square error</a>
+      <li><a href="mathematics/numerical_methods/Roots_of_equations.html#index-2">Root bracketing</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/statistics/Linear_Regression.html#index-1">Root-mean-square error</a>
+</li>
       <li><a href="geosciences/Keplerian_Orbits.html#index-3">Rotating coordinates</a>
 </li>
       <li><a href="mathematics/numerical_methods/Runge_Kutta_method.html#index-0">Runge-Kutta method</a>
@@ -574,6 +582,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-3">Scalar and vector fields</a>
+</li>
+      <li><a href="mathematics/numerical_methods/Roots_of_equations.html#index-4">Secant method of root finding</a>
 </li>
       <li><a href="mathematics/differential_equations/12_similarity_solutions.html#index-0">Self-similar solutions</a>
 </li>
