--- a/mathematics/numerical_methods/Numerical_integration.html
+++ b/mathematics/numerical_methods/Numerical_integration.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Runge-Kutta integration method" href="Runge_Kutta_method.html" />
+    <link rel="next" title="Roots of equations" href="Roots_of_equations.html" />
     <link rel="prev" title="Numerical differentiation" href="Numerical_differentiation.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -120,6 +120,9 @@
       </li>
       <li class="active">
         <a href="">Numerical integration</a>
+      </li>
+      <li class="">
+        <a href="Roots_of_equations.html">Roots of equations</a>
       </li>
       <li class="">
         <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
@@ -1086,7 +1089,7 @@ Area with 1000 Weddle&#39;s interval(s) = 2 (error=8.88178e-16)
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Numerical_differentiation.html" title="previous page">Numerical differentiation</a>
-    <a class='right-next' id="next-link" href="Runge_Kutta_method.html" title="next page">Runge-Kutta integration method</a>
+    <a class='right-next' id="next-link" href="Roots_of_equations.html" title="next page">Roots of equations</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
