--- a/mathematics/numerical_methods/Forward_time_centred_space.html
+++ b/mathematics/numerical_methods/Forward_time_centred_space.html
@@ -122,6 +122,9 @@
         <a href="Numerical_integration.html">Numerical integration</a>
       </li>
       <li class="">
+        <a href="Roots_of_equations.html">Roots of equations</a>
+      </li>
+      <li class="">
         <a href="Runge_Kutta_method.html">Runge-Kutta integration method</a>
       </li>
       <li class="">
