deploy: e7c897a283ce81d6b8aabadc7a3e28212f4c1d49

--- a/modules/math_methods_1/1_Coordinate_Systems.html
+++ b/modules/math_methods_1/1_Coordinate_Systems.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Vectors" href="2_Vectors.html" />
+    <link rel="next" title="Vectors (Lecture 1)" href="2_Vectors.html" />
     <link rel="prev" title="Mathematical methods 1" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -98,7 +98,7 @@
         <a href="">Coordinate systems (Lecture 1)</a>
       </li>
       <li class="">
-        <a href="2_Vectors.html">Vectors</a>
+        <a href="2_Vectors.html">Vectors (Lecture 1)</a>
       </li>
       <li class="">
         <a href="3_Multivariable_Calculus.html">Multivariable calculus (Lecture 2)</a>
@@ -823,7 +823,7 @@ y = 5895.59
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Mathematical methods 1</a>
-    <a class='right-next' id="next-link" href="2_Vectors.html" title="next page">Vectors</a>
+    <a class='right-next' id="next-link" href="2_Vectors.html" title="next page">Vectors (Lecture 1)</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
