--- a/modules/math_methods_1/3_Multivariable_Calculus.html
+++ b/modules/math_methods_1/3_Multivariable_Calculus.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Vector calculus (Lecture 3)" href="4_Vector_Calculus.html" />
-    <link rel="prev" title="Vectors" href="2_Vectors.html" />
+    <link rel="prev" title="Vectors (Lecture 1)" href="2_Vectors.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -98,7 +98,7 @@
         <a href="1_Coordinate_Systems.html">Coordinate systems (Lecture 1)</a>
       </li>
       <li class="">
-        <a href="2_Vectors.html">Vectors</a>
+        <a href="2_Vectors.html">Vectors (Lecture 1)</a>
       </li>
       <li class="active">
         <a href="">Multivariable calculus (Lecture 2)</a>
@@ -574,7 +574,7 @@ The outer integral is:  32/3
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="2_Vectors.html" title="previous page">Vectors</a>
+    <a class='left-prev' id="prev-link" href="2_Vectors.html" title="previous page">Vectors (Lecture 1)</a>
     <a class='right-next' id="next-link" href="4_Vector_Calculus.html" title="next page">Vector calculus (Lecture 3)</a>
 
     </div>
