--- a/modules/math_methods_1/7_Series.html
+++ b/modules/math_methods_1/7_Series.html
@@ -98,7 +98,7 @@
         <a href="1_Coordinate_Systems.html">Coordinate systems (Lecture 1)</a>
       </li>
       <li class="">
-        <a href="2_Vectors.html">Vectors</a>
+        <a href="2_Vectors.html">Vectors (Lecture 1)</a>
       </li>
       <li class="">
         <a href="3_Multivariable_Calculus.html">Multivariable calculus (Lecture 2)</a>
