deploy: 339346d719b88a54f8af34af65a4c88757df3c5a

--- a/mathematics/numerical_methods/1_Interpolation_curve_fitting.html
+++ b/mathematics/numerical_methods/1_Interpolation_curve_fitting.html
@@ -113,28 +113,25 @@
         <a href="2_Numerical_differentiation.html">Numerical differentiation</a>
       </li>
       <li class="">
-        <a href="3_Timestepping_an_ODE.html">Solving (or “timestepping”) an ordinary differential equation (ODE)</a>
+        <a href="3_Timestepping_an_ODE.html">Solving or timestepping an ODE</a>
       </li>
       <li class="">
-        <a href="4_Euler_method.html">Euler method</a>
+        <a href="4_Heuns_method.html">Heun’s method</a>
       </li>
       <li class="">
-        <a href="5_Heuns_method.html">Heun’s method</a>
+        <a href="5_Runge_Kutta_method.html">Runge-Kutta method</a>
       </li>
       <li class="">
-        <a href="6_Runge_Kutta_method.html">Runge-Kutta method</a>
+        <a href="6_Solving_PDEs_SOR.html">Successive over-relaxation method</a>
       </li>
       <li class="">
-        <a href="7_Solving_PDEs_SOR.html">Successive over-relaxation method</a>
+        <a href="7_Forward_time_centred_space.html">Forward Time Centred Space scheme</a>
       </li>
       <li class="">
-        <a href="8_Forward_time_centred_space.html">Forward Time Centred Space scheme</a>
+        <a href="8_Numerical_integration.html">Numerical integration</a>
       </li>
       <li class="">
-        <a href="9_Numerical_integration.html">Numerical integration</a>
-      </li>
-      <li class="">
-        <a href="10_Roots_of_equations.html">Roots of equations</a>
+        <a href="9_Roots_of_equations.html">Roots of equations</a>
       </li>
     </ul>
     </li>
