--- a/genindex.html
+++ b/genindex.html
@@ -231,7 +231,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/numerical_methods/10_Roots_of_equations.html#index-3">Bisection method</a>
+      <li><a href="mathematics/numerical_methods/9_Roots_of_equations.html#index-3">Bisection method</a>
 </li>
       <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-0">Break and continue statements (python)</a>
 </li>
@@ -307,13 +307,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="geosciences/Milankovitch_cycles.html#index-1">Eccentricity</a>
 </li>
-      <li><a href="mathematics/numerical_methods/4_Euler_method.html#index-0">Euler method</a>
+      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-1">Explicit form (DE)</a>
-</li>
-      <li><a href="mathematics/numerical_methods/8_Forward_time_centred_space.html#index-2">Explicit scheme</a>
+      <li><a href="mathematics/numerical_methods/7_Forward_time_centred_space.html#index-2">Explicit scheme</a>
 </li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-0">Exponential function</a>
 </li>
@@ -327,7 +325,7 @@
 </li>
       <li><a href="coding/Intro to Python/13_File_handling.html#index-0">File handling</a>
 </li>
-      <li><a href="mathematics/numerical_methods/10_Roots_of_equations.html#index-0">Finding roots of equations numerically</a>
+      <li><a href="mathematics/numerical_methods/9_Roots_of_equations.html#index-0">Finding roots of equations numerically</a>
 </li>
       <li><a href="coding/Intro to Python/6_For_loops.html#index-0">For loop (python)</a>
 </li>
@@ -335,6 +333,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="mathematics/numerical_methods/3_Timestepping_an_ODE.html#index-1">Forward Euler scheme</a>
+</li>
       <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-0">Fourier series</a>
 </li>
       <li><a href="mathematics/series_and_sequences/Fourier Series.html#index-1">Fourier series: coefficients</a>
@@ -343,7 +343,7 @@
 </li>
       <li><a href="mathematics/complex analysis/Fractals.html#index-0">Fractals</a>
 </li>
-      <li><a href="mathematics/numerical_methods/8_Forward_time_centred_space.html#index-0">FTCS scheme</a>
+      <li><a href="mathematics/numerical_methods/7_Forward_time_centred_space.html#index-0">FTCS scheme</a>
 </li>
   </ul></td>
 </tr></table>
@@ -375,7 +375,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/differential_equations/10_heat_eq.html#index-0">Heat (diffusion) equation</a>
 </li>
-      <li><a href="mathematics/numerical_methods/5_Heuns_method.html#index-0">Heun&#39;s method</a>
+      <li><a href="mathematics/numerical_methods/4_Heuns_method.html#index-0">Heun&#39;s method</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -393,7 +393,7 @@
 </li>
       <li><a href="mathematics/differential_equations/3_first-order_odes.html#index-0">Implicit form (DE)</a>
 </li>
-      <li><a href="mathematics/numerical_methods/8_Forward_time_centred_space.html#index-1">Implicit scheme</a>
+      <li><a href="mathematics/numerical_methods/7_Forward_time_centred_space.html#index-1">Implicit scheme</a>
 </li>
       <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules (python)</a>
 </li>
@@ -487,7 +487,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/numerical_methods/2_Numerical_differentiation.html#index-0">Numerical differentiation</a>
 </li>
-      <li><a href="mathematics/numerical_methods/9_Numerical_integration.html#index-0">Numerical integration</a>
+      <li><a href="mathematics/numerical_methods/8_Numerical_integration.html#index-0">Numerical integration</a>
 </li>
   </ul></td>
 </tr></table>
@@ -539,7 +539,7 @@
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
 </li>
-      <li><a href="mathematics/numerical_methods/10_Roots_of_equations.html#index-1">Picard&#39;s method</a>
+      <li><a href="mathematics/numerical_methods/9_Roots_of_equations.html#index-1">Picard&#39;s method</a>
 </li>
       <li><a href="geosciences/Dynamic_Earth.html#index-0">Plate tectonics</a>
 </li>
@@ -571,7 +571,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/functions.html#index-3">Restriction (functions)</a>
 </li>
-      <li><a href="mathematics/numerical_methods/10_Roots_of_equations.html#index-2">Root bracketing</a>
+      <li><a href="mathematics/numerical_methods/9_Roots_of_equations.html#index-2">Root bracketing</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -579,7 +579,7 @@
 </li>
       <li><a href="geosciences/Keplerian_Orbits.html#index-3">Rotating coordinates</a>
 </li>
-      <li><a href="mathematics/numerical_methods/6_Runge_Kutta_method.html#index-0">Runge-Kutta method</a>
+      <li><a href="mathematics/numerical_methods/5_Runge_Kutta_method.html#index-0">Runge-Kutta method</a>
 </li>
   </ul></td>
 </tr></table>
@@ -589,7 +589,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-3">Scalar and vector fields</a>
 </li>
-      <li><a href="mathematics/numerical_methods/10_Roots_of_equations.html#index-4">Secant method of root finding</a>
+      <li><a href="mathematics/numerical_methods/9_Roots_of_equations.html#index-4">Secant method of root finding</a>
 </li>
       <li><a href="mathematics/differential_equations/12_similarity_solutions.html#index-0">Self-similar solutions</a>
 </li>
@@ -601,7 +601,7 @@
         <li><a href="coding/Intro to Python/16_Sets.html#index-0">(python)</a>
 </li>
       </ul></li>
-      <li><a href="mathematics/numerical_methods/7_Solving_PDEs_SOR.html#index-0">SOR algorithm</a>
+      <li><a href="mathematics/numerical_methods/6_Solving_PDEs_SOR.html#index-0">SOR algorithm</a>
 </li>
       <li><a href="mathematics/linear_algebra/Theory.html#index-2">Spanning set</a>
 </li>
@@ -632,6 +632,8 @@
       <li><a href="geosciences/Tides.html#index-1">Tidal frequencies</a>
 </li>
       <li><a href="geosciences/Tides.html#index-0">Tides</a>
+</li>
+      <li><a href="mathematics/numerical_methods/3_Timestepping_an_ODE.html#index-0">Timestepping an ODE</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
