deploy: 9c5f8b95dbb2f1aa1f51248bf22fc8432f5527ea

--- a/3_mathematics/numerical_methods/1_Interpolation_curve_fitting.html
+++ b/3_mathematics/numerical_methods/1_Interpolation_curve_fitting.html
@@ -115,6 +115,12 @@
       <li class="">
         <a href="9_Roots_of_equations.html">Roots of equations</a>
       </li>
+      <li class="">
+        <a href="10_linear_algebra_intro.html">Linear algebra introduction</a>
+      </li>
+      <li class="">
+        <a href="11_Gaussian_elimination.html">Gaussian elimination</a>
+      </li>
     </ul>
     </li>
     <li class="">
