--- a/3_mathematics/numerical_methods/9_Roots_of_equations.html
+++ b/3_mathematics/numerical_methods/9_Roots_of_equations.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Statistics" href="../statistics/intro.html" />
+    <link rel="next" title="Linear algebra introduction" href="10_linear_algebra_intro.html" />
     <link rel="prev" title="Numerical integration" href="8_Numerical_integration.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -114,6 +114,12 @@
       </li>
       <li class="active">
         <a href="">Roots of equations</a>
+      </li>
+      <li class="">
+        <a href="10_linear_algebra_intro.html">Linear algebra introduction</a>
+      </li>
+      <li class="">
+        <a href="11_Gaussian_elimination.html">Gaussian elimination</a>
       </li>
     </ul>
     </li>
@@ -1016,7 +1022,7 @@ Solution for initial guess 0.1 =  0.578262577864515
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="8_Numerical_integration.html" title="previous page">Numerical integration</a>
-    <a class='right-next' id="next-link" href="../statistics/intro.html" title="next page">Statistics</a>
+    <a class='right-next' id="next-link" href="10_linear_algebra_intro.html" title="next page">Linear algebra introduction</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
