--- a/genindex.html
+++ b/genindex.html
@@ -353,14 +353,18 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="3_mathematics/numerical_methods/11_Gaussian_elimination.html#index-1">Gauss-Jordan elimination</a>
+</li>
+      <li><a href="3_mathematics/numerical_methods/11_Gaussian_elimination.html#index-0">Gaussian elimination</a>
+</li>
       <li><a href="3_mathematics/series_and_sequences/Fourier Transforms.html#index-2">Gaussian function</a>
 </li>
       <li><a href="3_mathematics/linear_algebra/Eigenvalues_and_eigenvectors.html#index-1">Geometric multiplicity</a>
 </li>
-      <li><a href="3_mathematics/series_and_sequences/Fourier Series.html#index-2">Gibbs phenomenon</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="3_mathematics/series_and_sequences/Fourier Series.html#index-2">Gibbs phenomenon</a>
+</li>
       <li><a href="3_mathematics/calculus/Vector_calculus.html#index-6">Gradient of a scalar field</a>
 </li>
       <li><a href="3_mathematics/sets_and_functions/functions.html#index-2">Graph (functions)</a>
