--- a/3_mathematics/numerical_methods/3_Timestepping_an_ODE.html
+++ b/3_mathematics/numerical_methods/3_Timestepping_an_ODE.html
@@ -115,6 +115,12 @@
       <li class="">
         <a href="9_Roots_of_equations.html">Roots of equations</a>
       </li>
+      <li class="">
+        <a href="10_linear_algebra_intro.html">Linear algebra introduction</a>
+      </li>
+      <li class="">
+        <a href="11_Gaussian_elimination.html">Gaussian elimination</a>
+      </li>
     </ul>
     </li>
     <li class="">
