deploy: 829ed0a444f3defca8cdd7c7613c8647a2a783b8

--- a/3_mathematics/numerical_methods/10_linear_algebra_intro.html
+++ b/3_mathematics/numerical_methods/10_linear_algebra_intro.html
@@ -121,6 +121,9 @@
       <li class="">
         <a href="11_Gaussian_elimination.html">Gaussian elimination</a>
       </li>
+      <li class="">
+        <a href="12_LU_decomposition.html">LU decomposition</a>
+      </li>
     </ul>
     </li>
     <li class="">
