--- a/3_mathematics/statistics/intro.html
+++ b/3_mathematics/statistics/intro.html
@@ -41,7 +41,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Linear regression" href="Linear_Regression.html" />
-    <link rel="prev" title="Gaussian elimination" href="../numerical_methods/11_Gaussian_elimination.html" />
+    <link rel="prev" title="LU decomposition" href="../numerical_methods/12_LU_decomposition.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -258,7 +258,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../numerical_methods/11_Gaussian_elimination.html" title="previous page">Gaussian elimination</a>
+    <a class='left-prev' id="prev-link" href="../numerical_methods/12_LU_decomposition.html" title="previous page">LU decomposition</a>
     <a class='right-next' id="next-link" href="Linear_Regression.html" title="next page">Linear regression</a>
 
     </div>
