--- a/genindex.html
+++ b/genindex.html
@@ -447,10 +447,10 @@
 </li>
       <li><a href="3_mathematics/statistics/Linear_Regression.html#index-0">Linear regression</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="3_mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="2_coding/Intro to Python/7_List_comprehensions.html#index-0">List comprehensions (python)</a>
 </li>
       <li><a href="2_coding/Intro to Python/5_Lists.html#index-0">Lists (python)</a>
@@ -458,6 +458,8 @@
       <li><a href="3_mathematics/sets_and_functions/logic.html#index-0">Logic symbols</a>
 </li>
       <li><a href="2_coding/Intro to Python/4_While_loops.html#index-0">Loops: while loops</a>
+</li>
+      <li><a href="3_mathematics/numerical_methods/12_LU_decomposition.html#index-0">LU decomposition</a>
 </li>
   </ul></td>
 </tr></table>
