--- a/3_mathematics/numerical_methods/9_Roots_of_equations.html
+++ b/3_mathematics/numerical_methods/9_Roots_of_equations.html
@@ -121,6 +121,9 @@
       <li class="">
         <a href="11_Gaussian_elimination.html">Gaussian elimination</a>
       </li>
+      <li class="">
+        <a href="12_LU_decomposition.html">LU decomposition</a>
+      </li>
     </ul>
     </li>
     <li class="">
