deploy: c98be946727e5b7094ab3e80a4e9d6578e88ac15

--- a/c_mathematics/numerical_methods/10_linear_algebra_intro.html
+++ b/c_mathematics/numerical_methods/10_linear_algebra_intro.html
@@ -142,6 +142,9 @@
       <li class="">
         <a href="12_LU_decomposition.html">LU decomposition</a>
       </li>
+      <li class="">
+        <a href="BTCS.html">BTCS Scheme</a>
+      </li>
     </ul>
     </li>
     <li class="">
