--- a/c_mathematics/numerical_methods/12_LU_decomposition.html
+++ b/c_mathematics/numerical_methods/12_LU_decomposition.html
@@ -40,7 +40,7 @@
     <script async="async" src="../../_static/sphinx-thebe.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Series and sequences" href="../series_and_sequences/intro.html" />
+    <link rel="next" title="BTCS Scheme" href="BTCS.html" />
     <link rel="prev" title="Gaussian elimination" href="11_Gaussian_elimination.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -141,6 +141,9 @@
       </li>
       <li class="active">
         <a href="">LU decomposition</a>
+      </li>
+      <li class="">
+        <a href="BTCS.html">BTCS Scheme</a>
       </li>
     </ul>
     </li>
@@ -1029,7 +1032,7 @@ Have we succeeded in creating partial pivoting? True
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="11_Gaussian_elimination.html" title="previous page">Gaussian elimination</a>
-    <a class='right-next' id="next-link" href="../series_and_sequences/intro.html" title="next page">Series and sequences</a>
+    <a class='right-next' id="next-link" href="BTCS.html" title="next page">BTCS Scheme</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
