--- a/c_mathematics/numerical_methods/5_Runge_Kutta_method.html
+++ b/c_mathematics/numerical_methods/5_Runge_Kutta_method.html
@@ -142,6 +142,9 @@
       <li class="">
         <a href="12_LU_decomposition.html">LU decomposition</a>
       </li>
+      <li class="">
+        <a href="BTCS.html">BTCS Scheme</a>
+      </li>
     </ul>
     </li>
     <li class="">
