deploy: bb7c528b5660f321bf6d4504dc73d5e90d4ce211

--- a/c_mathematics/numerical_methods/10_linear_algebra_intro.html
+++ b/c_mathematics/numerical_methods/10_linear_algebra_intro.html
@@ -145,6 +145,9 @@
       <li class="">
         <a href="BTCS.html">BTCS Scheme</a>
       </li>
+      <li class="">
+        <a href="BTCS_20200820.html">BTCS Scheme</a>
+      </li>
     </ul>
     </li>
     <li class="">
