--- a/c_mathematics/numerical_methods/2_Numerical_differentiation.html
+++ b/c_mathematics/numerical_methods/2_Numerical_differentiation.html
@@ -145,6 +145,9 @@
       <li class="">
         <a href="BTCS.html">BTCS Scheme</a>
       </li>
+      <li class="">
+        <a href="BTCS_20200820.html">BTCS Scheme</a>
+      </li>
     </ul>
     </li>
     <li class="">
